2008-10-13  Bill Holmes  <billholmes54@gmail.com>

	* src/gdate-win32.c : Fix compiler errors for MSVC.

	* src/gpath.c : Fix compiler errors for MSVC.

	* src/gfile-posix.c : Adding declaration for mkstemp for the win 32
	  implementation in gfile-win32.c.

	Contributed under MIT/X11 license.

2008-10-11  Miguel de Icaza  <miguel@novell.com>

	* src/glib.h: Move g_strdup here, to consolidate all allocations
	in this header, will help for merging the allocation work later. 

	* src/gpattern.c (compile_pattern): From Unity, use -1 in the enum
	for MatchType.

	* src/gpath.c: Split this one as well.

	* src/gmodule-win32.c, src/gmisc-unix.c, src/gmisc-win32.c,
	src/gmodule-unix.c: split functionality in platforms.
	
	* src/goutput.c (g_logv): On some platforms, before we abort we
	want to flush the stdout/stderr.

2008-10-10  Miguel de Icaza  <miguel@novell.com>

	* Split functionality that is operating system specific into
	-win32.c, -unix.c and -posix.c 

	* Use g_malloc everywhere, and g_free, so that these can be easily
	overwritten consistently.

2008-09-16  Bill Holmes  <billholmes54@gmail.com>

	* src/gunicode.c : Fix a warning.

	Contributed under MIT/X11 license.

2008-08-28  Bill Holmes  <billholmes54@gmail.com>

	* src/glib.h : Adding a c++ definition for G_BEGIN_DECLS.

	Contributed under MIT/X11 license.

2008-08-27  Bill Holmes  <billholmes54@gmail.com>

	* glib.h, gunicode.c : Fixing some compiler errors.

	Contributed under MIT/X11 license.

2008-08-20  Mike Voorhees <vernish13@gmail.com>

	* Patch from Mike Voorhees to fix various problems with
	g_utf8_validate compared to the glib implementation and unit tests
	to ensure that there are no regressions.

	From a mailing list post to mono-devel-list on August 19th, 2008

	[Mono-dev] utf8 related patches. Please review.

2008-08-20  Mike Voorhees  <vernish13@gmail.com>

	* src/glib.h : Adding declarations for g_utf8_strlen, g_utf8_get_char,
	and g_utf8_next_char.
