@@ -2,11 +2,11 @@ noinst_LTLIBRARIES = libeglib.la
 
 win_files  = \
 	gdate-win32.c gdir-win32.c gfile-win32.c gmisc-win32.c \
-	gmodule-win32.c
+	gmodule-win32.c gtimer-win32.c
 
 unix_files = \
 	gdate-unix.c  gdir-unix.c  gfile-unix.c  gmisc-unix.c	\
-	gmodule-unix.c
+	gmodule-unix.c gtimer-unix.c
 
 if PLATFORM_WIN32
 os_files = $(win_files)
@@ -33,7 +33,6 @@ libeglib_la_SOURCES = \
 	gpath.c		\
 	gshell.c	\
 	gspawn.c	\
-	gtimer.c	\
 	gfile.c		\
 	gfile-posix.c	\
 	gpattern.c	\
