@@ -26,20 +26,11 @@
  * WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
  */
 #include <glib.h>
-#ifdef _MSC_VER
-#include <windows.h>
-#else
 #include <sys/time.h>
-#endif
 
 struct _GTimer {
-#ifdef _MSC_VER
-	guint64 start;
-	guint64 stop;
-#else
 	struct timeval start;
 	struct timeval stop;
-#endif
 };
 
 GTimer *g_timer_new (void)
@@ -62,48 +53,20 @@ void
 g_timer_start (GTimer *timer)
 {
 	g_return_if_fail (timer != NULL);
-#ifdef _MSC_VER
-	QueryPerformanceCounter ((LARGE_INTEGER*)&timer->start);
-#else
 	gettimeofday (&timer->start, NULL);
 	memset (&timer->stop, 0, sizeof (struct timeval));
-#endif
-
 }
 
 void
 g_timer_stop (GTimer *timer)
 {
 	g_return_if_fail (timer != NULL);
-#ifdef _MSC_VER
-	QueryPerformanceCounter ((LARGE_INTEGER*)&timer->stop);
-#else
 	gettimeofday (&timer->stop, NULL);
-#endif
 }
 
 gdouble
 g_timer_elapsed (GTimer *timer, gulong *microseconds)
 {
-#ifdef _MSC_VER
-	guint64 stop;
-	guint64 freq;
-	gdouble seconds;
-	if (timer->stop == 0) {
-		QueryPerformanceCounter ((LARGE_INTEGER*)&stop);
-	}
-	else {
-		stop = timer->stop;
-	}
-
-	QueryPerformanceFrequency ((LARGE_INTEGER*)&freq);
-	seconds = 1.0 * (stop - timer->start) / freq;
-
-	if (microseconds) {
-		*microseconds = (gulong)(1000000.0 * (stop - timer->start) / freq);
-	}
-	return seconds;
-#else
 	struct timeval tv;
 	gulong seconds;
 	long usec;
@@ -128,7 +91,6 @@ g_timer_elapsed (GTimer *timer, gulong *microseconds)
 	}
 	result = seconds * 1000000 + usec;
 	return (result / 1000000);
-#endif
 }
 
 
